--- a/public/style.css
+++ b/public/style.css
@@ -71,7 +71,8 @@ main {
 .button-submit,
 .button-pass,
 .button-warning,
-.button-sort{
+.button-sort-rank,
+.button-sort-suit {
     color: white;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -107,8 +108,16 @@ main {
   background: rgb(223, 117, 20);
 }
 
-.button-sort {
-  background: rgb(66, 184, 221);
+.button-sort-rank, 
+.button-sort-suit {
   font-size: 20px;
   margin: 15px;
+}
+
+.button-sort-rank {
+  background: rgb(66, 184, 221);
+}
+
+.button-sort-suit {
+  background-color: brown;
 }
