--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,10 @@ body {
   flex-direction: column;
 }
 
+.black-background {
+  background-color: #403F3F;
+}
+
 .website-background-color {
   background-color: green !important;
 }
@@ -17,6 +21,7 @@ main {
   height: 60vh;
   width: 100%;
   overflow-y: scroll;
+  background-color: #F1F1F1;
 }
 
 .game-wrapper {
@@ -26,11 +31,13 @@ main {
 }
 
 .game-canvas {
-  min-height: 430px;
+  min-height: 370px;
   border: solid 1px black;
   width: 100%;
   display: block;
   background-color: #F6EBC1;
+  padding-top: 10px;
+  padding-left: 20px;
 }
 
 .game-hand {
@@ -86,6 +93,7 @@ main {
   padding-left: 130px; 
   padding-right: 130px;
   margin-top: 20px;
+  min-height: 62px;
 }
 
 .button-submit {
